tests/poorly_formed_exports_config_false/poorly_formed_exports_config_false.exp
FLOW STATUS:
Error ------------------------------------------------------------------------------------------------- libs/libs.js:3:1

Cannot use `block` statements in a library file. The statement will be ignored. [unsupported-syntax]

      v
   3| {
   4|   exports.foo = 5;
   5| }
      ^


Error ------------------------------------------------------------------------------------------------- libs/libs.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   exports.foo = 5;
        ^^^^^^^


Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 3 errors
FLOW CHECK-CONTENTS:
Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 1 error
